# astronomy_ml

./: .gitignore  README.md  pyproject.toml
data/: all_tess_2025.07.04.csv
notebooks/: NoiseRemovalv2.ipynb  Sidereal.ipynb  TESS_Sector_59_and_73_Comparison.ipynb  TOI_1858.ipynb  TOI_3726.ipynb  cbv_study.ipynb  exo_planet_stat.ipynb  handle_noise.ipynb  lecture_0.ipynb  lightkurve.ipynb  lightkurve_notes.ipynb  mt_lemmon_observation_proposal.ipynb  pandas_visualization.ipynb  paper_TOI_1408_inner_companion_to_a_hot_jupiter.ipynb  radial_velocities.ipynb  tutorial1.ipynb
processed/TOI-3726/: exofop_tess_tois.csv  observation_summary.ipynb  sector_59_and_73_drift.emf
processed/TOI-3726/20240926/: Limb_Measurements_fitpanel01_rel_flux_T1.txt  Measurements.fits.fz  Measurements_fitpanel01_rel_flux_T1.json  Measurements_fitpanel01_rel_flux_T1.txt  apertures_0926.apertures  pipelineout.apertures  pipelineout_fitpanel01_rel_flux_T1.txt  pipelineout_measurements.apertures  pipelineout_measurements.plotcfg  pipelineout_measurements.xls  pipelineout_v1_fitpanel01_rel_flux_T1.txt  pipelineout_v1_measurements.apertures  pipelineout_v1_measurements.plotcfg  pipelineout_v1_measurements.xls
processed/TOI-3726/20241025/: Limb_Measurements_fitpanel01_rel_flux_T1.txt  Measurements.fits.fz  Measurements_fitpanel01_rel_flux_T1.json  Measurements_fitpanel01_rel_flux_T1.txt  aperture_1025.apertures  pipelineout_fitpanel01_rel_flux_T1.txt  pipelineout_measurements.apertures  pipelineout_measurements.plotcfg  pipelineout_measurements.xls  pipelineout_v1.apertures  pipelineout_v1_fitpanel01_rel_flux_T1.txt  pipelineout_v1_measurements.apertures  pipelineout_v1_measurements.plotcfg  pipelineout_v1_measurements.xls
processed/TOI-3726/20241227/: Limb_Measurements_fitpanel01_rel_flux_T1.txt  Measurements_fitpanel01_rel_flux_T1.txt  apertures_1227.apertures  pipelineout.apertures  pipelineout_fitpanel01_rel_flux_T1.txt  pipelineout_measurements.apertures  pipelineout_measurements.plotcfg  pipelineout_measurements.xls  pipelineout_v1.apertures  pipelineout_v1_fitpanel01_rel_flux_T1.txt  pipelineout_v1_measurements.apertures  (+2 more)
(+21 files in other folders)
