[project]
name = "astronomy_ml"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sophia268238", email = "sophia268238@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "keras>=3.2.1",
    "scipy>=1.13.0",
    "ipython>=8.23.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "lightkurve>=2.4.2",
    "jupyter>=1.0.0",
    "certifi>=2024.7.4",
    "basemap>=1.4.1",
    "astral>=3.2",
    "sklearn>=0.0.post12",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
[source]
pypi = "https://pypi.org/simple"

requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-2.0 license"}


[tool.pdm]
distribution = false

