[project]
name = "astronomy_ml"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sophia268238", email = "sophia268238@gmail.com"},
]
dependencies = [
    "radvel>=1.4.11",
    "lightkurve>=2.4.2",
    "tessLATTE>=0.1.0",
    "astral>=3.2",
    "scipy>=1.10.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "h5py>=3.11.0",
    "celerite>=0.4.3",
    "astropy>=6.0.1",
    "ccdproc>=2.4.2",
    "photutils>=1.11.0",
    "ipywidgets>=8.1.5",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
]
